# calendario

./: .coverage  .gitignore  AUTOMATIZACION_README.md  CORRECCION_RUTA_RED.md  add_pacientes_fields.py  add_usuario_field.py  configurar_tarea_programada.ps1  db.sqlite3  determinaciones.json  ejecutar_procesamiento.py  ejecutar_tarea_programada.bat  enviar_informes_diarios.bat  enviar_informes_diarios.sh  import_determinaciones.py  import_medicos.py  import_perfiles.py  informes_log.txt  main.py  medicos.json  pyproject.toml  requirements.txt  skills-lock.json  start_production.bat  start_waitress.py  tablas_completo.sql  tablas_extras.sql  tablas_extras_insert.sql  validar_configuracion.ps1
Agenda/: settings.py  settings.py.tmp  urls.py
determinaciones/: admin.py  apps.py  models.py  urls.py  views.py
informes/: README.md  admin.py  models.py  services.py  urls.py  views.py
instituciones/: admin.py  apps.py  models.py  urls.py  views.py
medicos/: admin.py  models.py  urls.py
mensajes/: mensaje_18_20251217_131004.pet  mensaje_1_20251211_124308.pet  mensaje_21_20251210_115405.pet  mensaje_23_20251209_185540.pet  mensaje_25_20251210_115241.pet  mensaje_32_20251217_123014.pet  mensaje_33_20251217_125347.pet  mensaje_38_20251217_135115.pet  mensaje_39_20251217_123643.pet  mensaje_42_20251217_122340.pet  mensaje_43_20251217_131551.pet  mensaje_44_20251217_135501.pet  mensaje_45_20251217_135705.pet  mensaje_46_20251217_161248.pet  mensaje_5_20251205_143858.txt  mensaje_7_20251205_144221.txt  mensaje_8_20251205_160143.txt  mensaje_8_20251208_184633.txt  (+1 more)
(+113 files in other folders)
