[project]
name = "calendario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.0",
    "psycopg2-binary>=2.9.0",
    "django-auditlog>=2.3.0",
    "reportlab>=4.0.0",
    "waitress>=2.1.0",
    "whitenoise>=6.0",
    "python-dotenv>=1.2.1",
]
